@@ -3,6 +3,7 @@ VDR Plugin 'xineliboutput' Revision History
 
 ????-??-??: Version 2.0.0
 
+- Support for cDevice::ScaleVideo()
 - Dropped support for vdr < 2.0
 
 2013-08-20: Version 1.1.0
